tests/gen/testdata/configs/fail/platform_missing_network.jsonnet
// networked extension metadata rejects a platform that omits network.vcn
// error_contains: Extension "oke_simple" for platform prod/data requires network.vcn
{
  hub: { kind: 'hub_e', network: { vcn: '10.0.0.0/21' } },
  environments: {
    prod: {
      platforms: {
        data: {
          extension: {
            type: 'oke_simple',
            params: {
              kubernetes_version: 'v1.35.2',
              services_cidr: '10.96.0.0/16',
              api_endpoint_allowed_cidrs: ['10.0.1.0/24'],
            },
          },
        },
      },
    },
  },
}
